k3d/habitica.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: habitica
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: habitica
  template:
    metadata:
      labels:
        app: habitica
    spec:
      containers:
        - name: server
          image: awinterman/habitica:latest
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: "200m"
              memory: 384Mi
            limits:
              cpu: "1"
              memory: 1Gi
          readinessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 12

---
apiVersion: v1
kind: Service
metadata:
  name: habitica
  namespace: default
spec:
  selector:
    app: habitica
  ports:
    - port: 80
      targetPort: 3000

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: habitica
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: cerberus-ca
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  tls:
    - hosts: [habitica.hallm.local]
      secretName: habitica-tls
  rules:
    - host: habitica.hallm.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: habitica
                port:
                  number: 80
