k3d/signoz-ingress.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: signoz

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: signoz
  namespace: signoz
  annotations:
    cert-manager.io/cluster-issuer: cerberus-ca
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  tls:
    - hosts: [signoz.hallm.local]
      secretName: signoz-tls
  rules:
    - host: signoz.hallm.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: signoz-frontend
                port:
                  number: 3301
